FIX: play video on iOS

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,3 +3,6 @@
 *
   margin: 0
   padding: 0
+
+index, html
+  background: black
